--- a/pipelines/codemagic.yaml
+++ b/pipelines/codemagic.yaml
@@ -1,10 +1,32 @@
 workflows:
-  my-workflow:
+  develop:
     instance_type: mac_pro
     environment:
       xcode: 14.2
-      
-      
+  
+  
+  
+  
+    scripts:
+      - name: say hello
+        script: echo "Hello Codemagician!"
+        
+      - name: Run iOS tests
+        script: |
+          set -e # exit on first failed command
+
+          xcode-project run-tests \
+              --workspace ${XCODE_WORKSPACE?} \
+              --scheme ${XCODE_SCHEME?} \
+              --device "iPhone 12"
+        test_report: build/ios/test/*.xml
+        
+# pipeline for main
+  main:
+    instance_type: mac_pro
+    environment:
+      xcode: 14.2
+
     scripts:
       - name: say hello
         script: echo "Hello Codemagician!"
@@ -45,6 +67,16 @@ workflows:
                     --scheme "${XCODE_SCHEME?}"
     artifacts:
       - build/ios/ipa/*.ipa
-      
-      
-      
+  
+    publishing:
+      app_store_connect:
+        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
+        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
+        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
+        submit_to_testflight: true
+        beta_groups:
+          - Beta Testers
+
+        
+    
+
