--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,13 +1,11 @@
 
 workflows:
   develop:
-    instance_type: mac_pro
+    
+    instance_type: mac_mini_m1
     environment:
       xcode: 14.2
-  
-  
-  
-  
+
     scripts:
       - name: say hello
         script: echo "Hello Codemagician!"
@@ -24,7 +22,7 @@ workflows:
         
 # pipeline for main
   main:
-    instance_type: mac_pro
+    instance_type: mac_mini_m1
     environment:
       xcode: 14.2
 
@@ -77,7 +75,8 @@ workflows:
         submit_to_testflight: true
         beta_groups:
           - Beta Testers
-
-        
-    
-
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: develop
