--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,7 +9,9 @@ workflows:
     scripts:
       - name: say hello
         script: echo "Hello Codemagician!"
-        
+      - name: run unit tests
+        script:
+          - xcodebuild test -project Portfolio.xcodeproj -scheme Portfolio -destination "platform=iOS Simulator,name=iPhone 11,OS=14.2"
       
         
 # pipeline for main
