--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -22,7 +22,7 @@ workflows:
           xcode-project run-tests \
               --workspace ${XCODE_WORKSPACE?} \
               --scheme ${XCODE_SCHEME?} \
-              --device "iPhone 14 pro"
+              --device "iPhone 12"
         #test_report: build/ios/test/*.xml
         
 # pipeline for main
