--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,7 +8,7 @@ workflows:
       vars:
         #BUNDLE_ID: "io.codemagic.sample.iosnative"
         XCODE_WORKSPACE: "Portfolio.xcodeproj" # <-- Name of your Xcode workspace
-        XCODE_SCHEME: "Portfolio" # <-- Name of your Xcode scheme
+        XCODE_SCHEME: "PortfolioTests" # <-- Name of your Xcode scheme
 
     scripts:
       - name: say hello
